# pytest-dbt-postgres

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: ci-deploy.yml  ci-test.yml
pytest_dbt_postgres/: __init__.py  conftest.py  dbt_executor.py  dbt_validator.py
pytest_dbt_postgres/postgres/: connector.py  credentials.py  sql_methods.py
tests/: test_dbt_validator.py
tests/dummy_gummy/: dbt_project.yml
tests/dummy_gummy/models/: orders.sql  sources.yml
tests/dummy_gummy/models/base/: base_customers.sql  base_orders.sql  base_potatoes.sql
tests/dummy_gummy/seeds/: raw_potatoes.csv  seeds.yml
tests/resources/: profiles.yml
tests/resources/csv/input/: customers.csv  orders.csv
tests/resources/csv/output/: orders.csv
